manifests/bootstrapping/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.4.18
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
  selector:
    app.kubernetes.io/name: traefik
  type: LoadBalancer
